--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "burger_builder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://McGregorSt.github.io/burger_builder",
   "dependencies": {
     "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
@@ -63,7 +64,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+	"predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
